--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ spacex_launch_geo (1).csv
 spacex_launch_geo (2).csv
 spacex_launch_geo (3).csv
 spacex_launch_geo.csv
+EDA_VIZ/scatterplot3.png
+EDA_VIZ/barplot1.png
+EDA_VIZ/catplot1.png
+EDA_VIZ/catplot2.png
+EDA_VIZ/lineplot.png
+EDA_VIZ/scatterplot1.png
+EDA_VIZ/scatterplot2.png
+spacex_launch_dash.csv
+The_Report_Structure.pdf
