--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ EDA_VIZ/scatterplot1.png
 EDA_VIZ/scatterplot2.png
 spacex_launch_dash.csv
 The_Report_Structure.pdf
+*.png
+*.csv
+Best presentation.pdf
